Add reverce geolocation. Rewrite swagger API: add new endpoints
