# src/entities/Location.js
@@ -1,5 +1,8 @@
 class Location {
-    constructor(latitude, longitude) {
+    constructor(id, type, name, latitude, longitude) {
+        this.id = id,
+        this.type = type,
+        this.name = name,
         this.latitude = latitude;
         this.longitude = longitude;
     }
